--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "cypress": "^5.4.0",
     "cypress-cucumber-preprocessor": "^4.0.0"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
